Fixed incorrect url

--- a/idf_component.yml
+++ b/idf_component.yml
@@ -1,6 +1,6 @@
 version: 1.0.0
 description: SH1106 ESP-IDF Driver by TNY Robotics
-url: https://https://github.com/TNY-Robotics/sh1106-esp-idf
+url: https://github.com/TNY-Robotics/sh1106-esp-idf
 repository: https://github.com/TNY-Robotics/sh1106-esp-idf.git
 issues: https://github.com/TNY-Robotics/sh1106-esp-idf/issues
 maintainers:
