--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 idf_component_register(
     SRCS "esp_lcd_panel_sh1106.c"
     INCLUDE_DIRS "include"
-    REQUIRES "driver"
+    REQUIRES "driver esp_lcd"
 )
